# strawberry-fastapi-graphql-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
src/: main.py
src/api/: middlewares.py
src/api/graphql/v1/: exceptions.py  utils.py
src/api/graphql/v1/converters/: product.py  review.py  user.py
src/api/graphql/v1/mutations/: mutation.py  product.py  review.py  user.py
src/api/graphql/v1/queries/: product.py  query.py  (+2 more)
src/common/: di.py  exceptions.py  utils.py
src/common/base/: dto.py  repo.py
src/common/db/sqlalchemy/: base.py  config.py  extensions.py
src/common/graphql/: query.py
src/common/graphql/base/: resolvers.py
src/common/logging/: loggers.py
src/core/: di.py  utils.py
src/core/db/sqlalchemy/: __init__.py  base.py  extensions.py
src/gateways/: base.py
src/gateways/sqlalchemy/: product.py  review.py  user.py
src/product_service/: main.py
src/product_service/core/: di.py  dto.py
src/product_service/gateways/: base.py
src/product_service/gateways/sqlalchemy/: product.py  review.py  user.py
src/products/graphql/resolvers/: products.py  reviews.py
src/products/repositories/: base.py
src/products/services/: products.py  reviews.py
src/repositories/: base.py
src/repositories/sqlalchemy/: product.py  review.py  user.py
src/users/: service.py
src/users/graphql/: resolver.py
src/users/graphql/schemas/: mutations.py  queries.py
src/users/repositories/: base.py
src/users/repositories/sqlalchemy/: repo.py
tests/api/: common.py  test_user_queries.py
(+28 files in other folders)
